src/test/ui/borrowck/borrowck-partial-reinit-4.stderr
error[E0381]: binding `x.0` isn't initialized
  --> $DIR/borrowck-partial-reinit-4.rs:17:5
   |
LL |     let mut x : (Test2, Test2);
   |         ----- variable declared here
LL |     (x.0).0 = Some(Test);
   |     ^^^^^^^ `x.0` assigned here but it isn't initialized

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
